# cc-cloud

./: NOTICE  README.md  dockerfile  pyproject.toml
.github/workflows/: python-test.yml
cc_cloud/: __init__.py  app.py  file_manager.py  filesystem_manager.py  routes.py
cc_cloud/rest/: routes.py
cc_cloud/routes/: routes.py
cc_cloud/service/: cloud_service.py  file_service.py  filesystem_service.py
cc_cloud/system/: file_manager.py  local_user.py
dev/: cc-agency.yml  docker-compose.yml  uwsgi-cloud.ini
dev/docker/: sshd_config
tests/service/: test_file_service.py  test_filesystem_service.py
